testsuite/tests/overloadedrecflds/should_fail/overloadedrecfldsfail03.hs
{-# LANGUAGE OverloadedRecordFields #-}

foo = True

data T = MkT { foo :: Int }

main = print foo
